--- a/package.json
+++ b/package.json
@@ -4,8 +4,25 @@
   "license": "MIT",
   "version": "0.0.0",
   "private": true,
-  "main": "src/index.ts",
+  "type": "module",
+  "main": "src/index.tsx",
   "scripts": {
-    "dev": "bun src/index.ts"
+    "compile": "tsc",
+    "dev": "bunx --bun vite",
+    "build": "bunx --bun vite build"
+  },
+  "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "framer-motion": "^10.16.16",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.46",
+    "@types/react-dom": "^18.2.18",
+    "@vitejs/plugin-react": "^4.2.1",
+    "vite": "^5.0.10"
   }
 }
